# HAS

servant-todo/: .gitignore  runtest.sh  servant-todo.cabal  stack.yaml  truncate_tables.py
servant-todo/app/: Main.hs
servant-todo/src/: Config.hs  Controller.hs  Model.hs  Route.hs
servant-todo/test/: AppSpec.hs
spock-todo/: spock-todo.cabal  stack.yaml  truncate_tables.py
spock-todo/app/: Main.hs
spock-todo/src/: Config.hs  Controller.hs  Model.hs  Route.hs
spock-todo/test/: AppSpec.hs
