name:                spock-todo
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/githubuser/spock-todo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Model
                     , Controller
                     , Route
                     , Config
  build-depends:       base
                     , text
                     , bytestring
                     , transformers
                     , mtl
                     , persistent >=2.1.1.7 && <2.3
                     , persistent-template
                     , persistent-mysql
                     , esqueleto
                     , monad-logger
                     , resourcet
                     , directory
                     , process
                     , strict
                     , aeson
                     , async
                     , pwstore-fast
                     , xss-sanitize
                     , time
                     , unix
                     , wai
                     , wai-middleware-static
                     , wai-extra
                     , Spock
  default-language:    Haskell2010
  ghc-options:         -Wall

executable spock-todo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , spock-todo
                     , text
                     , mtl
                     , aeson
  default-language:    Haskell2010

test-suite spock-todo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test

  main-is:             Spec.hs
  other-modules:       AppSpec
  build-depends:       base
                     , spock-todo
                     , wai
                     , wai-extra
                     , Spock
                     , Spock-core
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , persistent >=2.1.1.7 && <2.3
                     , persistent-template
                     , persistent-mysql
                     , esqueleto
                     , monad-logger
                     , bytestring
                     , text
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/spock-todo
